--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Kronan-registration",
+  "name": "Kronan-Reg",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "app.js"
   },
   "dependencies": {
-    "express": "3.3.8",
-    "ejs": "*"
-  }
+    "express": "*",
+    "ejs":"*"
+   }
 }
