--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "dependencies": {
     "express": "3.4.7",
     "ejs": "*",
+    "ejs-locals": "*",
+    "winston": "*",
     "nconf": "*",
     "log4js": "*",
     "mongodb": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "async": "*",
+    "connect-mongo": "*"
   }
 }
