--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "port": 3000,
   "mongoose": {
-    "uri": "mongodb://localhost/registration",
+    "uri": "mongodb://root:pass@ds037737.mongolab.com:37737/kroreg",
     "options": {
       "server": {
         "socketOptions": {
@@ -10,7 +10,6 @@
       }
     }
   },
-<<<<<<< HEAD
   "session": {
     "secret": "KillerIsJim",
     "key": "sid",
@@ -20,17 +19,4 @@
       "maxAge": null
     }
   }
-=======
-  "session":{
-      "secret": "killerIsJim",
-      "key": "sid",
-      "cookie": {
-        "path": "/",
-        "httpOnly": true,
-        "maxAge": null
-      }
-    } 
-  
-
->>>>>>> 149cb2217e74bf0f87aaf0c4797d70494537cfc0
 }
