--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.7",
-    "ejs": "*",
-    "ejs-locals": "*",
+    "express": "~4.0.0",
+    "morgan": "~1.0.0",
+    "body-parser": "~1.0.0",
+    "method-override": "~1.0.0",
+    "static-favicon": "*",
+    "cookie-parser": "*",
     "winston": "*",
     "nconf": "*",
     "log4js": "*",
